gcc/testsuite/g++.dg/parse/enum10.C
namespace A { }
enum A::B { };			// { dg-error "" }
